Add maintenance pokemon (without desing)

--- a/Pokedex/Views/Region/Edit.cshtml
+++ b/Pokedex/Views/Region/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Pokedex.Models.Region
 
 @{
-    ViewData["Title"] = "Edit Region";
+    ViewData["Title"] = "Editar Region";
 }
 
 <h1>Editar Region</h1>
