Design Region Complete

--- a/Pokedex/Views/Region/Delete.cshtml
+++ b/Pokedex/Views/Region/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Eliminar Region";
 }
 
-<h1>Eliminar Regiones</h1>
+<h1><i class="fas fa-globe-europe"></i> Eliminar Regiones</h1>
 
 <h3>Estas a punto de borrar una Region!! Estas seguro?</h3>
 <div>
@@ -21,6 +21,6 @@
     
     <form asp-action="Delete">
         <input type="submit" value="Eliminar" class="btn btn-danger" /> |
-        <a asp-action="Index">Volver a la Lista</a>
+        <a asp-action="Index" class="btn btn-outline-dark"><i class="fas fa-undo-alt"></i> Volver a la Lista</a>
     </form>
 </div>
