--- a/Pokedex/Views/Region/Create.cshtml
+++ b/Pokedex/Views/Region/Create.cshtml
@@ -6,7 +6,7 @@
 
     <h1>Crear nueva region</h1>
 
-<h4>Region</h4>
+<h4><i class="fas fa-globe-europe"></i> Region</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,14 +18,14 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary"/>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Volver a la Lista</a>
+    <a asp-action="Index" class="btn btn-outline-dark"><i class="fas fa-undo-alt"></i> Volver a la Lista</a>
 </div>
 
 @section Scripts {
