--- a/Pokedex/Views/Region/Edit.cshtml
+++ b/Pokedex/Views/Region/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Editar Region";
 }
 
-<h1>Editar Region</h1>
+<h1><i class="fas fa-globe-europe"></i> Editar Region</h1>
 
 <h4>Region</h4>
 <hr />
@@ -18,14 +18,14 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Guardar" class="btn btn-primary" />
+               <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Volver a la Lista</a>
+    <a asp-action="Index" class="btn btn-outline-dark"><i class="fas fa-undo-alt"></i> Volver a la Lista</a>
 </div>
 
 @section Scripts {
