--- a/Pokedex/Views/Type/Create.cshtml
+++ b/Pokedex/Views/Type/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Crear Tipo";
 }
 
-<h1>Crear nuevo tipo</h1>
+<h1><i class="fas fa-spa"></i> Crear nuevo tipo</h1>
 
 <h4>Tipo</h4>
 <hr />
@@ -25,7 +25,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Volver a la Lista</a>
+    <a asp-action="Index" class="btn btn-outline-dark"><i class="fas fa-undo-alt"></i> Volver a la Lista</a>
 </div>
 
 @section Scripts {
