--- a/Pokedex/Views/Type/Delete.cshtml
+++ b/Pokedex/Views/Type/Delete.cshtml
@@ -4,23 +4,23 @@
     ViewData["Title"] = "Eliminar Tipo";
 }
 
-<h1>Elmiminar tipo de pokemon</h1>
+<h1><i class="fas fa-spa"></i> Eliminar tipo de pokemon</h1>
 
 <h3>Estas a punto de borrar un tipo de pokemon!! Estas seguro?</h3>
 <div>
     <h4>Tipo</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class = "col-sm-10">
-           <lable>@Model.Name</lable>
+        <dd class="col-sm-10">
+            <lable>@Model.Name</lable>
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="submit" value="Eliminar" class="btn btn-danger" /> |
-        <a asp-action="Index">Volver a la Lista</a>
+        <a asp-action="Index" class="btn btn-outline-dark"><i class="fas fa-undo-alt"></i> Volver a la Lista</a>
     </form>
 </div>
