--- a/Pokedex/Views/Type/Index.cshtml
+++ b/Pokedex/Views/Type/Index.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Lista de tipos";
 }
 
-<h1>Lista de tipos</h1>
+<h1><i class="fas fa-spa"></i> Lista de tipos</h1>
 
 <p>
-    <a asp-action="Create">Crear Nuevo</a>
+    <a class="btn btn-outline-dark" asp-action="Create" role="button"><i class="fas fa-plus"></i> Añadir Tipo</a>
 </p>
-<table class="table">
-    <thead>
+<table class="table table-borderless">
+    <thead class="thead-dark">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
@@ -19,16 +19,18 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a asp-controller="Type" asp-action="Edit" asp-route-id="@item.Id">Editar</a>|
-                <a asp-controller="Type" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr style="background-color:@item.color">
+                <td class="font-weight-bold text-capitalize">
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td align="right">
+                    <a class="btn btn-light btn-sm" asp-controller="Type" asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-edit"></i> Editar</a>|
+                    <a class="btn btn-danger btn-sm" asp-controller="Type" asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash-alt"></i> Eliminar</a>
+                </td>
+            </tr>
+
+        }
     </tbody>
 </table>
