Desing Maintenance pokemon complete

--- a/Pokedex/Views/Pokemon/Edit.cshtml
+++ b/Pokedex/Views/Pokemon/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Editar Pokemon";
 }
 
-<h1>Editar Pokemon</h1>
+<h1><i class="fas fa-paw"></i> Editar Pokemon</h1>
 
 <h4>Pokemon</h4>
 <hr />
@@ -44,7 +44,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Volver a la Lista</a>
+    <a asp-action="Index" class="btn btn-outline-dark"><i class="fas fa-undo-alt"></i> Volver a la Lista</a>
 </div>
 
 @section Scripts {
