--- a/Pokedex/Views/Pokemon/Create.cshtml
+++ b/Pokedex/Views/Pokemon/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Crear Pokemon";
 }
 
-<h1>Crear nuevo pokemon</h1>
+<h1><i class="fas fa-paw"></i> Crear nuevo pokemon</h1>
 
 <h4>Pokemon</h4>
 <hr />
@@ -33,14 +33,14 @@
                 <span asp-validation-for="Powers" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-outline-dark"><i class="fas fa-undo-alt"></i> Volver a la Lista</a>
 </div>
 
 @section Scripts {
