--- a/Pokedex/Views/Pokemon/Index.cshtml
+++ b/Pokedex/Views/Pokemon/Index.cshtml
@@ -4,13 +4,13 @@
     ViewData["Title"] = "Lista de Pokemones";
 }
 
-<h1>Lista de pokemones</h1>
+<h1><i class="fas fa-paw"></i> Lista de pokemones</h1>
 
 <p>
-    <a asp-action="Create">Crear Nuevo</a>
+    <a class="btn btn-outline-dark" asp-action="Create" role="button"><i class="fas fa-plus"></i> Añadir Pokemon</a>
 </p>
-<table class="table">
-    <thead>
+<table class="table table-borderless">
+    <thead class="thead-dark">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
@@ -29,7 +29,7 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
+        <tr class="@item.RegionFkNavigation.color">
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
@@ -42,9 +42,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Powers)
             </td>
-            <td>
-                <a asp-controller="Pokemon" asp-action="Edit" asp-route-id="@item.Id">Editar</a>|
-                <a asp-controller="Pokemon" asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
+            <td align="right">
+                <a class="btn btn-light btn-sm" asp-controller="Pokemon" asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-edit"></i> Editar</a>
+                <a class="btn btn-danger btn-sm" asp-controller="Pokemon" asp-action="Delete" asp-route-id="@item.Id"><i class="fas fa-trash-alt"></i> Eliminar</a>
             </td>
         </tr>
 }
